<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteX="2dp"
    tools:layout_editor_absoluteY="-34dp">

    <EditText
        android:id="@+id/editTextNomUtilisateur_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/entrer_le_nom_d_utilisateur"
        android:inputType="text"
        android:textColorHint="#546E7A"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLogin_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLogin_id" />

    <EditText
        android:id="@+id/editTextTextPassword_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/entrer_le_mot_de_passe"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword_id"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin_id" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/bienvenue_au_laboratoire_not_1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPassword_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="32dp"
        android:text="@string/mot_de_passe"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPassword_id"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword_id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLogin_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="12dp"
        android:text="@string/nom_utilisateur"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNomUtilisateur_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="298dp"
        android:layout_marginBottom="299dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword_id"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/btnQuit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/quitter"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="387dp" />

</androidx.constraintlayout.widget.ConstraintLayout>